--- a/EstudianteSeguro/EstudianteSeguro/Web.config
+++ b/EstudianteSeguro/EstudianteSeguro/Web.config
@@ -11,8 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EstudianteSeguro-20200829074933.mdf;Initial Catalog=aspnet-EstudianteSeguro-20200829074933;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=tcp:srvdanielbd.database.windows.net,1433;Initial Catalog=BDDaniel;Persist Security Info=False;User ID=daniel;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
