--- a/EstudianteSeguro/EstudianteSeguro/Web.config
+++ b/EstudianteSeguro/EstudianteSeguro/Web.config
@@ -11,7 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=tcp:srvdanielbd.database.windows.net,1433;Initial Catalog=BDDaniel;Persist Security Info=False;User ID=daniel;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+    <add name="DefaultConnection" connectionString="Server=tcp:srvdanielbd.database.windows.net,1433;Initial Catalog=BDDaniel;Persist Security Info=False;User ID=daniel;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+	providerName="System.Data.SqlClient"	 />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
